app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_self
 *= require style-dark
 *= require bootstrap-theme.min
 *= require bootstrap.min
 *= require 'masonry/basic'
 *= require 'masonry/centered'
 *= require 'masonry/fluid'
 *= require 'masonry/gutters'
 *= require 'masonry/infinitescroll'
 *= require 'masonry/right-to-left'
 *= require 'masonry/transitions'
 *= require 'masonry/basic'
 *= require 'masonry/centered'
 *= require 'masonry/fluid'
 *= require 'masonry/gutters'
 *= require 'masonry/infinitescroll'
 *= require 'masonry/right-to-left'
 *= require 'masonry/transitions'
 *= require_tree .
 */

 html, body {
  width: 100%;
  height: 100%;
  background-color: black;
}

.header-buffer {
  height: 60px;
}

.background-img {
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  min-width: 100%;
  background: no-repeat center center; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  z-index: 0;
  opacity: 0.7;
}

#welcome {
  color: white;
  text-transform: uppercase;
  font-family: 'Raleway', sans-serif;
  padding-top: 60px;
  position: relative;
  z-index: 1000;
}

nav {
  width: 100%;
  background-color: black;
  margin: 0 auto;
  font-weight: 200;
}

.navbar-default.navbar-expanded, .navbar-inverse.navbar-expanded {
  background-color: black;
  border-color: transparent;
}

.navbar-fixed-top.navbar-expanded {
  padding: 10px;
}

.navbar a.navbar-brand{
  background: none;
}


.masonry {
  margin: 0 auto;
}

.masonry .item {
  width:  300px !important;
  height: 300px !important;
  float: left !important;
  background: #D26 !important;
  position: relative !important;
  margin-bottom: 10px !important;
  -webkit-box-sizing: border-box !important;
     -moz-box-sizing: border-box !important;
          box-sizing: border-box !important;
background: no-repeat center center !important;
  -webkit-background-size: cover !important;
  -moz-background-size: cover !important;
  -o-background-size: cover !important;
  background-size: cover !important;
  background-color: black !important;
}

.item {
  opacity: 0.8 !important;
}

.item:hover {
  opacity: 1 !important;
}

.item .event-name {

  text-align: center !important;
  font-family: 'Raleway', sans-serif !important;
  text-transform: uppercase !important;
  width: 100% !important;
  background: rgba(0,0,0,0.5) !important;
  position: absolute !important;
  padding: 10px !important;
  bottom: 0 !important;
  color: white !important;
  display: none !important;
}

.item:hover .event-name {
  display: block !important;
}
.event-name h3 {
  font-size: 18px !important;
}

.nav-list-color {
  color: #4cddf3 !important;
}

.notice {
  padding-top: 2% !important;
}

.background {
  background-color: black !important;
}

div .col-md-4 .btn {
  margin-bottom: 2% !important;
}

.img-circle {
  width: 300px !important;
  height: 300px !important;
  margin-left: 55% !important;
  margin-bottom: 40px !important;
}

.skill-bar {
 padding-left: 20%;
 padding-bottom: 10%;
}

.skill-bar ul li h5 {
  color: #000;
  text-transform: uppercase;
  font-family: "Raleway";
  font-weight: bolder;
}

.page-header {
  color: #fff;
  font-family: "Raleway";
  letter-spacing: 0.01em;
  font-size: 1.8em;
  font-weight: lighter;
  text-transform: uppercase;
  border: none;
  text-align: center;
  padding-top: 4%;
}

.col-md-6 {
  position: relative !important;
  width: 20% !important;
  margin-left: 17% !important;
  margin-right: 15% !important;
}

h4 {
  font-family: "Raleway";
  font-weight: bolder;
}

.main-color {
  font-family: "Raleway" !important;
  font-size: 1em !important;
  font-weight: lighter;
  text-transform: uppercase;
  line-height: 1em !important;
}

.btn-dark {
  background-color: #999;
  color: #111;
  border-color: transparent;
}

h4.white {
  font-family: "Raleway";
  font-size: 1em;
  padding-right: 8px;
  font-weight: lighter;
  text-transform: uppercase;
  line-height: 1em;
}

.button-holder {
  padding:25px 0 50px !important; 
  .btn {
    opacity: 0.4 !important;
  }
  &:hover .btn{ 
    opacity: 1.0 !important;
  }
}

.form-group {
  width: 100% !important;
}

.form-group .input-lg {
  width: 500px;
}

.form-group .control-group .controls #event_max_users, #event_total_price {
  width: 100px;
  border-radius: 5px;
  text-align: center;
  display: inline-block;
}

#title {
  font-family: 'Raleway', sans-serif;
  color: white;
  margin: 0 auto;
}


.header-box {
  width: 100%;
  height: 120px;
  background: black;
  position: absolute;
  left: 0;
  z-index: 0;
  margin-top: -20px;
}

.header {
  position: relative;
  z-index: 100;
  color: white;
  padding-top: 80px;
  padding-right: 5%;
  font-weight: 100 !important;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-family: 'Raleway', sans-serif;
  font-size: 30px;
}


.section-title {
  font-family: 'Raleway', sans-serif;
  font-size: 1.8em;
  font-weight: 800;
  text-decoration-line: underline;
  text-decoration-style: double;
  text-decoration-color: #4cddf3;
  text-transform: uppercase;
  color: white;
  padding-top: 60px;
  padding-bottom: 40px;
}

.img-left {
  margin-left: 5% !important;
  margin-top: -20% !important;
}

.btn-outline {
  background-color: #000;
  color: #fff;
  border: 2px solid #fff;
  padding: 10px;
  display: inline-block;
  text-align: center;
  width: 100px;
}

.extra-bottom {
  padding-bottom: 8% !important;
}

